# TilePathing

./: .editorconfig  .gitignore  CMakeLists.txt  CreateWinVS.bat  Dependencies.lua  README.md  premake5.lua
Benchmarking/: premake5.lua
Benchmarking/src/: Benchmarks.cpp
Editor/: CMakeLists.txt  imgui.ini  premake5.lua
Editor/assets/shaders/: ColoredTile.frag  ColoredTile.vert  TileMap.frag  TileMap.vert
Editor/include/: Application.h  Camera.h  TimeStep.h
Editor/include/ImGuiWindows/: BaseImGuiWindow.h  CharacterWindow.h  ConsoleWindow.h  ContentBrowserWindow.h  TileMapPathsWindow.h  TileMapPropertiesWindow.h
Editor/include/Input/: KeyCodes.h
Editor/include/TileMap/: TileLayer.h
Editor/src/: Application.cpp  Application.h  Log.cpp  Log.h  Main.cpp  Property.cpp  Property.h
Editor/src/ImGuiWindows/: BaseImGuiWindow.cpp  CharacterWindow.cpp  ConsoleWindow.cpp  ContentBrowserWindow.cpp  ContentBrowserWindow.h  TileMapPathsWindow.cpp  TileMapPathsWindow.h  TileMapPropertiesWindow.cpp
Editor/src/Input/: Input.cpp
Editor/src/OpenGL/: GLFramebuffer.cpp  GLIndexBuffer.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h
Editor/src/TileMap/: TileLayer.cpp  TileMap.cpp  TileMapLayer.h  TilePathing.cpp  TileSet.cpp
Editor/src/Utils/: FileUtils.cpp  FileUtils.h  MeshUtils.cpp  MeshUtils.h  StringUtils.cpp
Engine/: CMakeLists.txt
Engine/glad/include/glad/: glad.h
Engine/glad/src/: glad.c
Engine/include/: Core.h  Log.h
Engine/include/OpenGL/: GLBufferLayout.h  GLFramebuffer.h  GLIndexBuffer.h  GLShader.h  GLTexture.h  GLVertexArray.h  GLVertexBuffer.h
Engine/include/Utils/: TimeUtils.h
Engine/src/: Log.cpp
Engine/src/OpenGL/: GLFramebuffer.cpp  GLIndexBuffer.cpp  GLShader.cpp  GLTexture.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp
Engine/src/Utils/: FileUtils.cpp  StringUtils.cpp
TilePathing/: imgui.ini  premake5.lua
TilePathing/assets/shaders/: ColoredTile.vert  TileMap.frag  TileMap.vert
TilePathing/assets/tilemaps/: SMBMap.tmx  SMBTiles.tsx
TilePathing/src/: Application.cpp  Application.h  Camera.cpp  Character.cpp  Character.h  ConsoleWindow.cpp  ConsoleWindow.h  Core.h  Main.cpp  Property.h  TimeStep.h
TilePathing/src/ImGuiWindows/: CharacterWindow.cpp  CharacterWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  ContentBrowserWindow.cpp  ContentBrowserWindow.h  (+5 more)
(+21 files in other folders)
